# ScoreApp

./: .gitignore  AI_GUIDELINES.md  Apresentacao_Detalhada.md  Apresentacao_ScoreApp.md  README.md  check_table_structure.py  comandos.txt  database.db-shm  database.db-wal  fix_table_structure.py  index.html  main.py  package-lock.json  package.json  test_save.py
src/: App.tsx  db_manager.py  email_manager.py  index.css  main.py  themes.ts
src-tauri/: Cargo.toml  app.manifest  build.rs  resource.rc  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: db_manager.rs  main.rs
src/components/: ActionsModal.css  ActionsModal.tsx  BottomBar.css  BottomBar.tsx  CommentModal.css  CommentModal.tsx  DetailedRecordsTable.tsx  ExportFormModal.css  ExportFormModal.tsx  ImportScoreModal.css  ImportScoreModal.tsx  ImportSupplierModal.css  ImportSupplierModal.tsx  LogsTable.css  LogsTable.tsx  MainLayout.css  MainLayout.tsx  MetricsOverview.css  MetricsOverview.tsx  PrivilegesManager.css  PrivilegesManager.tsx  RegressionModal.css  RegressionModal.tsx  RegressionPanel.css  RegressionPanel.tsx  ScoreGauge.tsx  SplashScreen.css  SplashScreen.tsx  SupplierEditModal.css  SupplierEditModal.tsx  SupplierInfoModal.css  SupplierInfoModal.tsx  SupplierManager.css  SupplierManager.tsx  ThemeSelector.css  ThemeSelector.tsx  TitleBar.css  TitleBar.tsx  Toast.css  Toast.tsx  (+4 more)
src/contexts/: PermissionsContext.tsx  ScoreContext.tsx  TimelineContext.tsx  ToastContext.tsx
src/hooks/: useToast.ts
src/pages/: Contributors.css  Contributors.tsx  Email.tsx  EmailPlaceholder.tsx  (+19 more)
(+8 files in other folders)
