[package]
name = "score-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-create-dir", "fs-remove-file", "fs-exists", "fs-rename-file", "fs-read-dir", "fs-read-file", "fs-copy-file", "fs-remove-dir", "fs-write-file", "dialog-save", "dialog-message", "dialog-ask", "dialog-open", "dialog-confirm", "window-maximize", "window-hide", "window-show", "window-unminimize", "window-unmaximize", "window-start-dragging", "window-close", "window-minimize", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
once_cell = "1.19"
chrono = "0.4"
rust_xlsxwriter = "0.78"
calamine = "0.26"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
